clazz.newInstance deprecated with java17, PsystemDedication